bdr.BDR.scala.error
Compilation error:
BDR:13: error: ';' expected but 'else' found.
                               else test=false 
                               ^